--- a/Views/NVAcau3/Index.cshtml
+++ b/Views/NVAcau3/Index.cshtml
@@ -37,9 +37,9 @@
                 @Html.DisplayFor(modelItem => item.PhoneSinhVien)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.MaSinhVien">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.MaSinhVien">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.MaSinhVien">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.MaSinhVien">Sửa</a> |
+                <a asp-action="Details" asp-route-id="@item.MaSinhVien">Thông Tin</a> |
+                <a asp-action="Delete" asp-route-id="@item.MaSinhVien">Xóa</a>
             </td>
         </tr>
 }
